# ai-task-planner

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  bot_polling.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  translate.py  translate2.py  translate3.py
alembic/: env.py
alembic/versions/: 04ca2a55a11d_add_constraints_and_reminders.py  bc5c504077b9_add_routine_tracking.py  e4ac5fe2bbcc_add_dependencies_and_energy_profile.py
app/: config.py  main.py
app/db/: engine.py  repository.py
app/llm/: base.py  factory.py  google.py  ollama.py  openrouter.py  prompts.py
app/models/: __init__.py  base.py  constraint.py  dependency.py  message.py  reminder.py  routine.py  task.py  user.py
app/schemas/: constraint.py  planner.py  reminder.py  rescheduler.py  statistics.py  task.py  timeline.py  voice.py  weather.py
app/services/: constraints.py  dependencies.py  energy.py  memory.py  planner.py  priority.py  reminder.py  rescheduler.py  routine.py  scheduler.py  statistics.py  timeline.py  voice.py  weather.py
app/transport/api/: routes.py
app/transport/telegram/: bot.py  callbacks.py  error_notifier.py  formatter.py  handlers.py  middlewares.py  states.py
app/utils/: time_parser.py  timezone.py
tests/: conftest.py  test_constraints.py  test_dependencies.py  test_energy.py  test_llm_providers.py  test_memory.py  test_priority.py  test_priority_v2.py  test_recurring.py  test_rescheduler.py  test_routine.py  test_schemas.py  test_statistics.py  test_weather_planning.py
