[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.13",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "httpx>=0.27",
    "ollama>=0.4",
    "openai>=1.50",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.30",
]
