[project]
name = "personal-task-planner"
version = "0.2.0"
description = "AI-powered personal task planner Telegram bot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.13",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "httpx>=0.27",
    "ollama>=0.4",
    "openai>=1.50",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.30",
    "faster-whisper>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[project.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
dev = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.ruff]
target-version = "py314"
line-length = 100

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
